# triangulator

./: .gitignore  CMakeLists.txt  Development-team.txt  README.md  build-script.sh  classes.cpp  classes.hpp  color.cpp  color.hpp  constants.hpp  global-vars.cpp  global-vars.hpp  input-and-output.cpp  input-and-output.hpp  ksimplex.cpp  ksimplex.hpp  logfile.html  main.cpp  old-build-script.sh  pachner.cpp  pachner.hpp  seed.cpp  seed.hpp  simpcomp.cpp  simpcomp.hpp  test.cpp  triangulator.hpp
GUI/: CMakeLists.txt  DrawComplex.cpp  DrawComplex.h  DrawComplex.ui  DrawComplexGLWidget.cpp  DrawComplexGLWidget.h  Inspector.cpp  Inspector.h  Inspector.ui  LogViewer.cpp  LogViewer.h  LogViewer.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PrintComplex.cpp  PrintComplex.h  RenameComplex.cpp  RenameComplex.h  RenameComplex.ui  SeedComplex.cpp  SeedComplex.h  SeedComplex.ui  SimpCompTableModel.cpp  SimpCompTableModel.h  TriangulatorGUI.h  TriangulatorGUIsystemHeaders.h  Utils.cpp  Utils.h  main.cpp
gui/: DrawComplex.cpp  DrawComplex.h  DrawComplex.ui  DrawComplexGLWidget.cpp  DrawComplexGLWidget.h  Inspector.h  Inspector.ui  LogViewer.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PrintComplex.cpp  PrintComplex.h  PrintComplex.ui  SeedComplex.cpp  SeedComplex.h  SeedComplex.ui  SimpCompTableModel.cpp  SimpCompTableModel.h  gpl.txt  main.cpp
my_build_dir/: CMakeCache.txt
test/: CMakeLists.txt  attach-simplex.cpp  cayleymengertest.cpp  determinanttest.cpp  drawingtest.cpp  main.cpp  pachnertest.cpp  test.cpp  test1.cpp  volume-squared-color-test.cpp  volumesquaredtest.cpp
third_party_software/rapidxml/: CMakeLists.txt
